Passing data with event and property binding to recipe-detail component

--- a/project/src/app/recipes/recipes.component.html
+++ b/project/src/app/recipes/recipes.component.html
@@ -1,8 +1,15 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list [recipes]="recipes"></app-recipe-list>
+    <app-recipe-list
+      [recipes]="recipes"
+      (recipeSelected)="onRecipeSelected($event)"></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail></app-recipe-detail>
+    <app-recipe-detail
+      *ngIf="currentSelectedRecipe; else chooseRecipe"
+      [recipe]="currentSelectedRecipe"></app-recipe-detail>
+    <ng-template #chooseRecipe>
+      <p>Please choose a recipe!</p>
+    </ng-template>
   </div>
 </div>
